# Fleasion

./: .gitignore  CLOG.json  Fleasion.spec  FleasionLinuxProxyHelper.spec  FleasionProxyHelper.spec  README.md  fleasion.py  launcher.py  pyproject.toml  run.bat
.github/workflows/: build.yml  draft-release.yml
pyinstaller_hooks/: rthook_harden_dll_search.py
scripts/: build_macos.sh  clear_first_time_setup.py
src/Fleasion/: __init__.py  app.py  fleasionlogoHR.icns  linux_proxy_helper_daemon.py  macos_proxy_helper_daemon.py  tray.py
src/Fleasion/cache/: __init__.py  animation_viewer.py  asset_type_filter.py  audio_player.py  cache_json_viewer.py  cache_manager.py  cache_viewer.py  font_viewer.py  fps_controls.py  gl_format.py  mesh_processing.py  obj_viewer.py  rbxm_parser.py  rbxm_preview.py  roblox_class_names.py  roblox_document.py
src/Fleasion/cache/tools/: orm_compositor.py  rgba_ktx2.py
src/Fleasion/cache/tools/animpreview/: animpreview.py
src/Fleasion/cache/tools/image_to_ktx2/: __init__.py  converter.py
src/Fleasion/cache/tools/ktx_to_png/: __init__.py  ktx_to_png.py
src/Fleasion/cache/tools/solidmodel_converter/: __init__.py  converter.py  csg_mesh.py  mesh_intermediary.py  obj_to_csg.py  obj_to_mesh.py
src/Fleasion/cache/tools/solidmodel_converter/rbxm/: __init__.py  binary_reader.py  binary_writer.py  deserializer.py  serializer.py  types.py  xml_writer.py
src/Fleasion/config/: manager.py
src/Fleasion/gui/: __init__.py  about.py  delete_cache.py  file_drop.py  json_viewer.py  logs.py  modifications_tab.py  prejsons_dialog.py  proxy_gate.py  rando_stuff_tab.py  replacer_config.py  settings_tab.py  subplace_joiner_tab.py  theme.py
src/Fleasion/modifications/: __init__.py  dds_to_png.py  fflag_manager.py  font_utils.py  global_settings_manager.py  manager.py  platform_targets.py
src/Fleasion/modifications/bundled/: empty.mesh
src/Fleasion/prejsons/: downloader.py
src/Fleasion/proxy/: __init__.py  master.py  roblox_metadata.py  server.py  upstream.py  windows_proxy.py
src/Fleasion/proxy/addons/: __init__.py  cache_scraper.py  texture_stripper.py  username_spoofer.py
src/Fleasion/utils/: __init__.py  anim_converter.py  autostart.py  certs.py  clipboard.py  http.py  linux_proxy_helper.py  logging.py  macos_proxy_helper.py  paths.py  platform_linux.py  platform_macos.py  platform_windows.py  plural.py  r15_to_r6.py  rig_data.py  roblox_auth.py  roblox_dirs.py  secure_tokens.py  time_tracker.py  updater.py  windows.py
tests/: test_account_cookie_storage.py  test_app_single_instance.py  test_audio_player.py  test_autostart.py  test_build_macos_script.py  test_cache_manager_export.py  test_cache_scraper_places.py  test_category_filter_popup.py  test_column_visibility_menu.py  test_config_manager.py  test_csg_mesh.py  test_file_dialog_filters.py  test_file_drop.py  test_http.py  test_linux_desktop_install.py  test_linux_proxy_helper.py  test_linux_proxy_helper_daemon.py  test_logging.py  test_macos_proxy_helper.py  test_mesh_processing.py  test_modifications_manager.py  test_obj_viewer.py  test_paths.py  test_platform_linux.py  test_platform_macos.py  test_platform_targets.py  test_platform_windows.py  test_proxy_gate.py  test_proxy_hosts_parent.py  test_proxy_macos_startup.py  test_proxy_server.py  test_proxy_upstream_resolution.py  test_replacer_config_menu.py  test_rgba_ktx2.py  test_roblox_browser_auth.py  test_roblox_document.py  test_subplace_joiner_settings.py  test_texture_stripper.py  test_theme_manager.py  test_tray_dashboard.py  (+3 more)
