[project]
name = 'Fleasion'
version = '1.7.1'
description = 'Roblox asset interceptor and replacer with PyQt6 GUI'
readme = 'README.md'
requires-python = '>=3.14'
dependencies = [
    'cryptography>=42.0.0',
    'pyqt6>=6.8.0',
    'pyopengl>=3.1.0',
    'DracoPy>=1.3.0',
    'pillow>=11.0.0',
    'numpy>=2.0.0',
    'pywin32>=307',
    'requests>=2.32.0',
    "sounddevice>=0.5.3",
    "soundfile>=0.13.1",
    "lz4>=4.4.5",
    "orjson>=3.9.0",
    "zstandard>=0.21.0",
]

# Optional / removed:
# mitmproxy - replaced by custom asyncio proxy (proxy/server.py)
#   Reason: mitmproxy local: mode uses WinDivert (breaks VPNs, adds overhead on
#   ALL Roblox traffic). Our custom proxy uses WinINet PAC file - only routes
#   assetdelivery.roblox.com and fts.rbxcdn.com through the proxy, everything
#   else goes DIRECT. Compatible with VPNs (loopback is never VPN-routed).

[project.scripts]
Fleasion = 'Fleasion:main'

[build-system]
requires = ['uv_build>=0.9.18,<0.10.0']
build-backend = 'uv_build'

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
]
